# adofai-event-processor

./: .gitignore  ADOFAI_Event_Processing.spec  License  README.md  build_2.ps2  pyproject.toml  version.txt
adofai_ep/: config.py  debug_launcher.py  i18n.py  main.py  presets.json  preview_standalone.py  processor.py
adofai_ep/gui/: app.py  debug_window.py  preview_window.py  toolbox.py  toolbox_ui.py  widgets.py
adofai_ep/gui/locales/: help_en.html  help_nya.html  help_zh.html
adofai_ep/lang/: en_US.json  ja_JP.json  ko_KR.json  zh_CN.json  zh_CN_Nya.json  zhi_CMD.json
adofai_ep/utils/: encoding.py
adofai_event_processor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
