[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adofai-event-processor"
version = "4.4.0"
description = "ADOFAI Event Processor - ADOFAI事件处理工具"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "NeoMoyelle", email = "handsomemoyan@outlook.com"}
]
keywords = ["adofai", "game", "editor", "tool"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
]

dependencies = [
    "ttkbootstrap>=1.10.0",
    "tkinterdnd2>=0.3.0",
    "chardet>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "build>=1.0",
]

[project.urls]
Homepage = "https://github.com/handsome-MoYan/adofai-event-processor"
Repository = "https://github.com/handsome-MoYan/adofai-event-processor"
Issues = "https://github.com/handsome-MoYan/adofai-event-processor/issues"

[project.scripts]
adofai-ep = "adofai_ep.main:start_gui"
